[package]
edition = "2021"
name = "m-league-data-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "offline",
] }
